2007-05-30  Alan Modra  <amodra@bigpond.net.au>

	* objcopy.c (copy_object): Revert 2007-05-11 change.  Don't
	avoid calling bfd_copy_private_bfd_data for ELF STRIP_NONDEBUG.
	(setup_section): Don't modify flags, and don't avoid calling
	bfd_copy_private_section_data for ELF STRIP_NONDEBUG.
	* readelf.c (process_program_headers): Ignore .dynamic of type
	SHT_NOBITS.

2007-05-29  Alan Modra  <amodra@bigpond.net.au>

	* embedspu.sh: Emit SPU ELF image to .data.rel.ro.speelf if
	pic or pie and image needs relocs.

2007-05-24  Steve Ellcey  <sje@cup.hp.com>

	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.
	* doc/Makefile.in: Regenerate.

2007-05-24  Kai Tietz  <Kai.Tietz@onevision.com>

	* rcparse.y: Join strings for elements having no side-effects in
	"rc"-grammar.

2007-05-23  Kai Tietz  <Kai.Tietz@onevision.com>

	* rclex.c: New file replacing rclex.l.
	* rclex.l: Removed.
	* windint.h: New file holding common structure and type
	definitions.
	* Makefile.am: Added new header windint.h and exchanged rclex.l by
	rclex.c.
	* Makefile.in: Regenerate.
	* rcparse.y: Renamed some structures.
	Use in internal representation always bfd_vma instead of long or
	int.
	Removed from %union unused stringtable.
	Added to %union suni structure for unicode strings.
	Added new tokens for ANICURSOR, ANIICON, DLGINCLUDE,
	DLGINIT, FONTDIR, HTML, MANIFEST, PLUGPLAY, VXD,
	TOOLBAR, BUTTON, QUOTEDUNISTRING, and SIZEDUNISTRING.
	Added support for these new rc file tokens.
	* resbin.c: Rewrote using bfd and binary structures, and support
	new resource types.
	* rescoff.c: Likewise.
	* resres.c: Likewise.
	* resrc.c: Likewise. Dumps as RC are now recompilable.
	* windres.c: As above. Using bfd for res and provide target
	specific endianess support.
	* windres.h: Use windint.h as include. Additionally removed K&R
	syntax.
	* winduni.c: New printing and unichar support routines.
	* winduni.h: Prototypes for new unichar helpers.
	* windint.h: New file.
